Produced Outline Talk

--- a/index.html
+++ b/index.html
@@ -40,37 +40,32 @@
         </section>
 
         <section>
-          <h2>Overview</h2>
+          <h2>Why this Talk?</h2>
           <span class="fragment" style="color:yellow">Demystify Using C++20 Coroutines for Networking</span><br>
-          <span class="fragment" style="color:yellow">Emphasis on practical examples and code</span>
-          <p>
-          <ul>
-            <span class="fragment"><li>Coroutines: fundamentals, benefits and usage</li></span>
-            <span class="fragment">
-              <ul>
-                <li><a href="https://www.lua.org/versions.html#5.4">Lua 5.4.4</a><span class="fragment"> and <a href="https://en.cppreference.com/w/cpp/language/coroutines">C++20</a></span></li>
-              </ul>
-            </span>
-            <span class="fragment"><li>How to Write Networking Code Using Coroutines</li></span>
-            <ul>
-              <span class="fragment"><li><a href="https://github.com/jamespascoe/CoChat.git">CoChat</a>: a coroutine based chat program</li></span>
-              <span class="fragment"><li><a href="https://www.boost.org/doc/libs/1_78_0/doc/html/boost_asio/overview/core/cpp20_coroutines.html">Boost Asio (1.78)</a></li></span>
-            </ul>
-            <span class="fragment"><li>C++23: the future of Coroutines</li></span>
-          </ul>
+        </section>
+
+        <section>
+          <h2>Concern 1: Will I Stop Coding?</h2>
+        </section>
+
+        <section>
+          <h2>Concern 2: What is My Role?</h2>
+        </section>
+
+        <section>
+          <h2>Concern 3: How Do I Motivate Others?</h2>
+        </section>
+
+        <section>
+          <h2>Concern 4: Hard Conversations<h2>
+        </section>
+
+        <section>
+          <h2>Concern 5: What Are the Benefits?<h2>
         </section>
 
         <section>
           <h2>Conclusion</h2>
-            <ul>
-              <span class="fragment"><li>C++20 coroutines provide a language capability</li></span>
-              <span class="fragment"><ul><li>Functions can be suspended and later resumed</li></ul></span>
-              <span class="fragment"><li>Coroutines allow asynchronous code to be written</li></span>
-              <span class="fragment"><ul><li>With the readability of synchronous code</li></ul></span>
-              <span class="fragment"><li>Using coroutines in user-code can seem difficult</li></span>
-              <span class="fragment"><ul><li>Library support is improving</li></ul></span>
-              <span class="fragment"><ul><li>Persevere with <a href="#/key-references">key references</a></li></ul></span>
-            </ul>
         </section>
 
         <section>
