--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <section data-menu-title="Coroutines for Networking">
           <h2>Why It's Good to be a<br>Software Manager</h2>
           <p>
+          <h3>(The Five Concerns of Software Management)</h3>
             <small>
               Jim (James) Pascoe<br>
               <a href="http://www.james-pascoe.com">http://www.james-pascoe.com</a><br>
@@ -46,6 +47,13 @@
 
         <section>
           <h2>Concern 1: Will I Stop Coding?</h2>
+          <ul>
+            <span class="fragment" style="color:yellow"><li>In a word - no. Certainly not my experience</li></span>
+            <span class="fragment" style="color:yellow"><li>Solve harder problems</li></span>
+            <span class="fragment" style="color:yellow"><li>Stay in touch wth the code</li></span>
+            <span class="fragment" style="color:yellow"><li>Team members respect coding skills</li></span>
+            <span class="fragment" style="color:yellow"><li>Mentoring others means mastering your skills</li></span>
+          </ul>
         </section>
 
         <section>
