Added Slides for Concerns 2,3 & 4

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <section>
           <h2>Why this Talk?</h2>
-          <span class="fragment" style="color:yellow">Demystify Using C++20 Coroutines for Networking</span><br>
+          <span class="fragment" style="color:yellow">Demystify Using C++20 Coroutines for Networking</span>
         </section>
 
         <section>
@@ -50,22 +50,44 @@
           <ul>
             <span class="fragment" style="color:yellow"><li>In a word - no. Certainly not my experience</li></span>
             <span class="fragment" style="color:yellow"><li>Solve harder problems</li></span>
-            <span class="fragment" style="color:yellow"><li>Stay in touch wth the code</li></span>
+            <span class="fragment" style="color:yellow"><li>Stay in touch with the code</li></span>
             <span class="fragment" style="color:yellow"><li>Team members respect coding skills</li></span>
             <span class="fragment" style="color:yellow"><li>Mentoring others means mastering your skills</li></span>
           </ul>
         </section>
 
         <section>
-          <h2>Concern 2: What is My Role?</h2>
+          <h2>Concern 2: What do I do day-to-day?</h2>
+          <ul>
+            <span class="fragment" style="color:yellow"><li>Organise the work</li></span>
+            <span class="fragment" style="color:yellow"><ul><li>We use Jira - other strategies work well</li></ul></span>
+            <span class="fragment" style="color:yellow"><li>Translate commercial strategy into a roadmap</li></span>
+            <span class="fragment" style="color:yellow"><ul><li>Work packages and deliveries</li></ul></span>
+            <span class="fragment" style="color:yellow"><li>Some process is good</li></span>
+            <span class="fragment" style="color:yellow"><ul><li>Definition of done</li></ul></span>
+          </ul>
         </section>
 
         <section>
           <h2>Concern 3: How Do I Motivate Others?</h2>
+          <ul>
+            <span class="fragment" style="color:yellow"><li>Understand individual motivations</li></span>
+            <span class="fragment" style="color:yellow"><li>Use interesting tools and libraries</li></span>
+            <span class="fragment" style="color:yellow"><li>Make it fun</li></span>
+            <span class="fragment" style="color:yellow"><li>Praise is free</li></span>
+            <span class="fragment" style="color:yellow"><li>Track happiness</li></span>
+          </ul>
         </section>
 
         <section>
-          <h2>Concern 4: Hard Conversations<h2>
+          <h2>Concern 4: Hard Conversations</h2>
+          <ul>
+            <span class="fragment" style="color:yellow"><li>Do happen occasionally</li></span>
+            <span class="fragment" style="color:yellow"><li>Come straight to the point</li></span>
+            <span class="fragment" style="color:yellow"><li>Focus on outcome</li></span>
+            <span class="fragment" style="color:yellow"><li>Make it clear what needs to change</li></span>
+            <span class="fragment" style="color:yellow"><li>Be fair and respectful</li></span>
+          </ul>
         </section>
 
         <section>
