Further Updates to Slides

--- a/index.html
+++ b/index.html
@@ -41,57 +41,72 @@
         </section>
 
         <section>
-          <h2>Why this Talk?</h2>
-          <span class="fragment" style="color:yellow">Demystify Using C++20 Coroutines for Networking</span>
-        </section>
-
-        <section>
-          <h2>Concern 1: Will I Stop Coding?</h2>
+          <h2 style="color:yellow">Why this Talk?</h2>
           <ul>
-            <span class="fragment" style="color:yellow"><li>In a word - no. Certainly not my experience</li></span>
-            <span class="fragment" style="color:yellow"><li>Solve harder problems</li></span>
-            <span class="fragment" style="color:yellow"><li>Stay in touch with the code</li></span>
-            <span class="fragment" style="color:yellow"><li>Team members respect coding skills</li></span>
-            <span class="fragment" style="color:yellow"><li>Mentoring others means mastering your skills</li></span>
+            <span class="fragment"><li>Becoming a software manager is daunting</li></span>
+            <span class="fragment"><li>... but there are many benefits to doing so</li></span>
+            <span class="fragment"><li>Share my experience</li></span>
+            <span class="fragment"><li>Address concerns</li></span>
+            <span class="fragment"><li>Debunk myths</li></span>
           </ul>
         </section>
 
-        <section>
-          <h2>Concern 2: What do I do day-to-day?</h2>
+        <section data-menu-title="1. Will I Stop Coding?">
+          <h2 style="color:yellow">Concern 1: Will I Have to Stop Coding?</h2>
           <ul>
-            <span class="fragment" style="color:yellow"><li>Organise the work</li></span>
-            <span class="fragment" style="color:yellow"><ul><li>We use Jira - other strategies work well</li></ul></span>
-            <span class="fragment" style="color:yellow"><li>Translate commercial strategy into a roadmap</li></span>
-            <span class="fragment" style="color:yellow"><ul><li>Work packages and deliveries</li></ul></span>
-            <span class="fragment" style="color:yellow"><li>Some process is good</li></span>
-            <span class="fragment" style="color:yellow"><ul><li>Definition of done</li></ul></span>
+            <span class="fragment"><li>In a word - no. Certainly not my experience</li></span>
+            <span class="fragment"><li>Solve harder problems</li></span>
+            <span class="fragment"><li>Stay in touch with the code</li></span>
+            <span class="fragment"><li>Team members respect coding skills</li></span>
+            <span class="fragment"><li>Mentoring others means mastering your skills</li></span>
           </ul>
         </section>
 
-        <section>
-          <h2>Concern 3: How Do I Motivate Others?</h2>
+        <section data-menu-title="2. The Day-to-Day Role">
+          <h2 style="color:yellow">Concern 2: What do I do day-to-day?</h2>
           <ul>
-            <span class="fragment" style="color:yellow"><li>Understand individual motivations</li></span>
-            <span class="fragment" style="color:yellow"><li>Use interesting tools and libraries</li></span>
-            <span class="fragment" style="color:yellow"><li>Make it fun</li></span>
-            <span class="fragment" style="color:yellow"><li>Praise is free</li></span>
-            <span class="fragment" style="color:yellow"><li>Track happiness</li></span>
+            <span class="fragment"><li>Organise the work</li></span>
+            <span class="fragment"><ul><li>We use Jira - other strategies work well</li></ul></span>
+            <span class="fragment"><li>Translate commercial strategy into a roadmap</li></span>
+            <span class="fragment"><ul><li>Work packages and deliveries</li></ul></span>
+            <span class="fragment"><li>Some process is good</li></span>
+            <span class="fragment"><ul><li>Definition of done</li></ul></span>
           </ul>
         </section>
 
-        <section>
-          <h2>Concern 4: Hard Conversations</h2>
+        <section data-menu-title="3. How Do I Motivate Others">
+          <h2 style="color:yellow">Concern 3: How Do I Motivate Others?</h2>
           <ul>
-            <span class="fragment" style="color:yellow"><li>Do happen occasionally</li></span>
-            <span class="fragment" style="color:yellow"><li>Come straight to the point</li></span>
-            <span class="fragment" style="color:yellow"><li>Focus on outcome</li></span>
-            <span class="fragment" style="color:yellow"><li>Make it clear what needs to change</li></span>
-            <span class="fragment" style="color:yellow"><li>Be fair and respectful</li></span>
+            <span class="fragment"><li>Understand individual motivations</li></span>
+            <span class="fragment"><li>Use interesting tools and libraries</li></span>
+            <span class="fragment"><li>Make it fun</li></span>
+            <span class="fragment"><li>Praise is free</li></span>
+            <span class="fragment"><li>Track happiness</li></span>
           </ul>
         </section>
 
-        <section>
-          <h2>Concern 5: What Are the Benefits?<h2>
+        <section data-menu-title="4. Hard Conversations">
+          <h2 style="color:yellow">Concern 4: Hard Conversations</h2>
+          <ul>
+            <span class="fragment"><li>Do happen occasionally</li></span>
+            <span class="fragment"><li>Come straight to the point</li></span>
+            <span class="fragment"><li>Focus on outcome</li></span>
+            <span class="fragment"><li>Make it clear what needs to change</li></span>
+            <span class="fragment"><li>Be fair and respectful</li></span>
+          </ul>
+        </section>
+
+        <section data-menu-title="5. Benefits">
+          <h2 style="color:yellow">Concern 5: What Are the Benefits?</h2>
+          <ul>
+            <span class="fragment"><li>You can influence the technology</li></span>
+            <span class="fragment"><li>Solve software engineering problems</li></span>
+            <span class="fragment"><ul><li>Versioning, Delivery, DevOps etc.</li></ul></span>
+            <span class="fragment"><li>Commercial exposure</li></span>
+            <span class="fragment"><li>Improvement in communication skills</li></span>
+            <span class="fragment"><li>You can help people - training budgets, praise etc.</li></span>
+            <span class="fragment"><li>You will learn about yourself and others</li></span>
+          </ul>
         </section>
 
         <section>
