Finished First Complete Version

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <span class="fragment"><ul><li>We use Jira - other strategies work well</li></ul></span>
             <span class="fragment"><li>Translate commercial strategy into a roadmap</li></span>
             <span class="fragment"><ul><li>Work packages and deliveries</li></ul></span>
-            <span class="fragment"><li>Some process is good</li></span>
+            <span class="fragment"><li>Invest in process</li></span>
             <span class="fragment"><ul><li>Definition of done</li></ul></span>
           </ul>
         </section>
@@ -110,7 +110,14 @@
         </section>
 
         <section>
-          <h2>Conclusion</h2>
+          <h2 style="color:yellow">Conclusion</h2>
+          <ul>
+            <span class="fragment"><li>Technical leadership can be unnerving</li></span>
+            <span class="fragment"><li>But gives you different skills and mindsets</li></span>
+            <span class="fragment"><li>Definitely rewarding</li></span>
+            <span class="fragment"><ul><li>When approached in the right way</li></ul></span>
+            <span class="fragment"><li>You can always go back</li></span>
+          </ul>
         </section>
 
         <section>
