Added Speaker Notes

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
             <span class="fragment"><li>Address concerns</li></span>
             <span class="fragment"><li>Debunk myths</li></span>
           </ul>
+          <aside class="notes">
+          So why this talk? Well what I want to do is to point out some of the benefits of becoming a software manager.
+          And having been through this a few times, I know it can be daunting, but what I have found is that if approached
+          with the right mindset, moving into a Tech Leadership position can be immensely rewarding both from a personal
+          development perspective and also the positive effects you can have on the people that you lead.
+          </aside>
         </section>
 
         <section data-menu-title="1. Will I Stop Coding?">
@@ -65,13 +71,18 @@
         <section data-menu-title="2. The Day-to-Day Role">
           <h2 style="color:yellow">Concern 2: What do I do day-to-day?</h2>
           <ul>
-            <span class="fragment"><li>Organise the work</li></span>
+            <span class="fragment"><li>Organise the work (short-term)</li></span>
             <span class="fragment"><ul><li>We use Jira - other strategies work well</li></ul></span>
-            <span class="fragment"><li>Translate commercial strategy into a roadmap</li></span>
+            <span class="fragment"><li>Translate commercial strategy into a roadmap (longer-term)</li></span>
             <span class="fragment"><ul><li>Work packages and deliveries</li></ul></span>
-            <span class="fragment"><li>Invest in process</li></span>
-            <span class="fragment"><ul><li>Definition of done</li></ul></span>
+            <span class="fragment"><li>Develop an appropriate amount of process</li></span>
+            <span class="fragment"><ul><li>Definition of 'done'</li></ul></span>
           </ul>
+          <aside class="notes">
+          The first bullet is about the short-term day-to-day activities. What are we doing for the next sprint?
+          The second is about the longer-term, so anticipating what's coming, translating that into work packages,
+          and scheduling those within the capacity of the team.
+          </aside>
         </section>
 
         <section data-menu-title="3. How Do I Motivate Others">
@@ -83,6 +94,15 @@
             <span class="fragment"><li>Praise is free</li></span>
             <span class="fragment"><li>Track happiness</li></span>
           </ul>
+          <aside class="notes">
+            Motivating people - how to get engineers to do what you ask. Engineers are, by definition, very smart people.
+            They certainly have brains, they have ideas of their own and they have options. So, [laughs] one of the things
+            you quickly realise as a manager is that people aren't necessarily going to do what you say, just because you
+            say it.
+
+            So, in terms of motivating people, there are lots of things you should do. For me, what I have found to be
+            fundamental in this regard is respect.
+          </aside>
         </section>
 
         <section data-menu-title="4. Hard Conversations">
@@ -94,6 +114,15 @@
             <span class="fragment"><li>Make it clear what needs to change</li></span>
             <span class="fragment"><li>Be fair and respectful</li></span>
           </ul>
+          <aside class="notes">
+            Do happen occasionally - and it would probably be remiss of me not to mention this. Occasionally, you do have
+            to tell somebody that despite them working 60 hour weeks all year, you can't promote them because of budget
+            constraints. But, when you've been through a few of these, you realise that these occasions are not actually
+            that bad and can be constructive if conducted in the right way.
+
+            [bullets 2-5]
+
+            You have a responsibility and to some extent a duty-of-care towards your team.
         </section>
 
         <section data-menu-title="5. Benefits">
@@ -107,17 +136,38 @@
             <span class="fragment"><li>You can help people - training budgets, praise etc.</li></span>
             <span class="fragment"><li>You will learn about yourself and others</li></span>
           </ul>
+          <aside class="notes">
+          [bullets 1-7]
+
+          And just to pick up on that last bullet, one thing I discovered about myself is that
+          I like responsibility. It sounds a bit odd, but I like the notion of saying 'actually
+          I am going to deliver on this customer deployment' or 'business goal' or whatever. Not
+          leaving for somebody else to think about.
+
+          And the other thing that becoming a manager has done for me is this point about respect.
+          I don't know if I am just getting older [laughs], but you realise that regardless of
+          technical skills, seniority, profile whatever, people are people and are trying to do the
+          right thing, they are trying to work hard balance family commitments, health issues.
+
+          So, that's been particularly rewarding for me.
+          </aside>
         </section>
 
         <section>
           <h2 style="color:yellow">Conclusion</h2>
           <ul>
-            <span class="fragment"><li>Technical leadership can be unnerving</li></span>
+            <span class="fragment"><li>Technical leadership can be daunting</li></span>
             <span class="fragment"><li>But gives you different skills and mindsets</li></span>
             <span class="fragment"><li>Definitely rewarding</li></span>
             <span class="fragment"><ul><li>When approached in the right way</li></ul></span>
             <span class="fragment"><li>You can always go back</li></span>
           </ul>
+          <aside class="notes">
+          [bullets 1-5]
+
+          And one final thing, if people higher up in the organisation think that you would be a good
+          manager, then chances are you will be.
+          </aside>
         </section>
 
         <section>
