Added Further Notes

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
             <span class="fragment"><li>Team members respect coding skills</li></span>
             <span class="fragment"><li>Mentoring others means mastering your skills</li></span>
           </ul>
+          <aside class="notes">
+          This is very much the elephant in the room. And, in a word, no. I think this notion that, on becoming a manager,
+          you immediately give up all coding and switch solely to PowerPoint is about as odd as it sounds. If you enter
+          senior management, thats probably more likely, but not at the 'Tech Leadership' roles.
+          </aside>
         </section>
 
         <section data-menu-title="2. The Day-to-Day Role">
@@ -73,7 +78,7 @@
           <ul>
             <span class="fragment"><li>Organise the work (short-term)</li></span>
             <span class="fragment"><ul><li>We use Jira - other strategies work well</li></ul></span>
-            <span class="fragment"><li>Translate commercial strategy into a roadmap (longer-term)</li></span>
+            <span class="fragment"><li>Translate commercial strategy into a roadmap</li></span>
             <span class="fragment"><ul><li>Work packages and deliveries</li></ul></span>
             <span class="fragment"><li>Develop an appropriate amount of process</li></span>
             <span class="fragment"><ul><li>Definition of 'done'</li></ul></span>
