--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <ul>
             <span class="fragment"><li>Technical leadership can be daunting</li></span>
             <span class="fragment"><li>But gives you different skills and mindsets</li></span>
-            <span class="fragment"><li>Definitely rewarding</li></span>
+            <span class="fragment"><li>Definitely rewarding:</li></span>
             <span class="fragment"><ul><li>When approached in the right way</li></ul></span>
             <span class="fragment"><li>You can always go back</li></span>
           </ul>
