Further Updates Before Presentation Tomorrow

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
 
               <a href="http://jamespascoe.github.io/accu2022-manager">http://jamespascoe.github.io/accu2022-manager</a><br>
             </small>
+          <aside class="notes">
+          Hello, good afternoon and welcome - my name is Jim Pascoe and today I am going to talk to you about 'Why Its good
+          to be a Software Manager'. The sub-title to this talk is 'The Five Concerns of Management' and we will see why in
+          just a moment.
+          <p>
+          Here is my email address and URL (if you want to find out a bit about what I've done in the past) and also, this
+          is the link to the online talk, so you can follow along from the comfort of your own browser if you prefer. So,
+          you can use the hamburger icon to skip between the slides and select a light theme if you prefer.
+          </aside>
         </section>
 
         <section>
@@ -69,14 +78,14 @@
           <aside class="notes">
           This is very much the elephant in the room. And, in a word, no. I think this notion that, on becoming a manager,
           you immediately give up all coding and switch solely to PowerPoint is about as odd as it sounds. If you enter
-          senior management, thats probably more likely, but not at the 'Tech Leadership' roles.
+          senior management, that;s probably more likely, but not at the 'Tech Leadership' roles.
           </aside>
         </section>
 
         <section data-menu-title="2. The Day-to-Day Role">
           <h2 style="color:yellow">Concern 2: What do I do day-to-day?</h2>
           <ul>
-            <span class="fragment"><li>Organise the work (short-term)</li></span>
+            <span class="fragment"><li>Organise the work</li></span>
             <span class="fragment"><ul><li>We use Jira - other strategies work well</li></ul></span>
             <span class="fragment"><li>Translate commercial strategy into a roadmap</li></span>
             <span class="fragment"><ul><li>Work packages and deliveries</li></ul></span>
@@ -111,7 +120,7 @@
         </section>
 
         <section data-menu-title="4. Hard Conversations">
-          <h2 style="color:yellow">Concern 4: Hard Conversations</h2>
+          <h2 style="color:yellow">Concern 4: 'Hard Conversations'</h2>
           <ul>
             <span class="fragment"><li>Do happen occasionally</li></span>
             <span class="fragment"><li>Come straight to the point</li></span>
@@ -120,6 +129,11 @@
             <span class="fragment"><li>Be fair and respectful</li></span>
           </ul>
           <aside class="notes">
+            I remember conducting an appraisal once where I was trying to convince a more Junior engineer that he should
+            take a more Tech Leadership role in the team. He had bags of technical skill, emotional intelligence - everything.
+            So, I suggested this to him, and he went pale and quiet. And so I asked him 'What's was he worried about?' and
+            after a few seconds, he said: 'Jim, I don't want to have hard Conversations with people'.
+            <p>
             Do happen occasionally - and it would probably be remiss of me not to mention this. Occasionally, you do have
             to tell somebody that despite them working 60 hour weeks all year, you can't promote them because of budget
             constraints. But, when you've been through a few of these, you realise that these occasions are not actually
