--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
             <span class="fragment"><li>Debunk myths</li></span>
           </ul>
           <aside class="notes">
-          So why this talk? Well what I want to do is to point out some of the benefits of becoming a software manager.
-          And having been through this a few times, I know it can be daunting, but what I have found is that if approached
-          with the right mindset, moving into a Tech Leadership position can be immensely rewarding both from a personal
-          development perspective and also the positive effects you can have on the people that you lead.
+            So why this talk? In a sentence, assuming any form of software leadshiper can be daunting <click>. But, what I
+            have found is that, if apporached in the right way, there are many benefits to doing so and it can be immensely
+            rewarding both from a personal development perspective and also the positive effects that you can have on the
+            people you lead.
+            <p>
+            So what I would like to do is to share my experience <click> and hopefully allay some of the concerns that others
+            might be having.
           </aside>
         </section>
 
